force-app/main/default/objects/Web_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Web Orders</relationshipLabel>
    <relationshipName>Web_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>