force-app/main/default/objects/Web_Order__c/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign ID</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Web Orders</relationshipLabel>
    <relationshipName>Web_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>