force-app/main/default/objects/Web_Order__c/fields/FromOpportunity__c.field-meta.xml
<CustomField>
    <fullName>FromOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FromOpportunity</label>
    <type>Checkbox</type>
</CustomField>