force-app/main/default/objects/Web_Order__c/fields/IqScore__c.field-meta.xml
<CustomField>
    <fullName>IqScore__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>