force-app/main/default/objects/Web_Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Web Orders</relationshipLabel>
    <relationshipName>Web_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>